# NetSysInfo

./: .gitignore  CMakeLists.txt  Database.txt  TODO  client.cpp  main.cpp
Client/: CMakeLists.txt  client.cpp
Client/include/: client.h
Server/: CMakeLists.txt  server.cpp
Server/include/: server.h
database/: "22413C462705\n".json  "22413C462705\n\u0000HORT=\u0000".json  "2705\n".json  "=22413C462705\n".json
include/: utils.h
include/client/: c_factory.h  c_request_handler.h  cli_connection.h  client.h  connection.h
include/database/: file_handler.h
include/fileHandler/: file_handler.h
include/server/: action.h  conection.h  connection.h  factory.h  request_handler.h  s_factory.h  s_request_handler.h  serv_connection.h  server.h
include/server/adm_menu/: menu.h
include/userManager/: user_manager.h
include/utils/: utils.h
sources/: CMakeLists.txt  utils.cpp  utils.h
sources/client/: CMakeLists.txt  c_request_handler.cpp  cli_connection.cpp  client.cpp  client_main.cpp  connection.cpp
sources/client/actions/: member_info.cpp  registration.cpp
sources/database/: CMakeLists.txt  file_handler.cpp
sources/fileHandler/: CMakeLists.txt  file_handler.cpp
sources/server/: CMakeLists.txt  action.cpp  conection.cpp  connection.cpp  request_handler.cpp  s_request_handler.cpp  serv_connection.cpp  server.cpp  server_main.cpp
sources/server/actions/: member_info.cpp  registration.cpp
sources/server/adm_menu/: CMakeLists.txt  menu.cpp  requests.cpp  turn_off.cpp  turn_on.cpp  users.cpp
sources/userManager/: CMakeLists.txt  user_manager.cpp
sources/utils/: utils.cpp
